--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
     <footer>
         <div class="l-rodape">
-            <p>Intelidata 2021 - Pesquisas Inteligentes</p>
+            <p>Eduardo Quirino &reg;2023</p>
         </div>
     </footer>
 </body>
